<resources>
    <string name="action_settings">Settings</string>
    <string name="action_test">Test</string>
    <string name="app_name">Nerdy Pig Fight</string>
    <string name="action_rules">Rules</string>
    <string name="pig_nerd">Stats</string>
    <string name="pig_fight">Fight</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_rules">Rules</string>
    <string name="rules_overview">Try and get as many points as you can by rolling a 6 sided die as many times as you want and keeping a running total of your pips. Your turn is over until one of two things occur:\n
        \t1. You roll a one. Pig Out! In which case all the points you have accumulated are lost.\n
        \t2. You decide to stop. In which case all the points you have accumulated thus far are kept in your overall total.\n
        The game is over as soon as:\n
    </string>
    <string name="point_threshold">Points Reached</string>
    <string name="turns_threshold">After This Many Turns</string>
    <string name="entry_error">Entry Error</string>
    <string name="error_positive">Entry must be a positive number</string>
    <string name="num_games">Number of games to run</string>
    <string name="battle_title">Choose Opponent</string>
    <string name="battle_title_result">Battle - Result</string>
    <string name="battle_player">Player %d</string>
    <string name="battle_player_your_turn">Your Turn</string>
    <string name="battle_player_ai_turn">AI Turn</string>
    <string name="battle_player_you_won">You WON</string>
    <string name="battle_player_ai_won">AI WON</string>
    <string name="strategy_rolls_name">Rolls %d</string>
    <string name="strategy_rolls_desc">Stop after %d rolls</string>
    <string name="strategy_points_name">Points %d</string>
    <string name="strategy_points_desc">Stop after %d points</string>
    <string name="strategy_even_name">Even %d</string>
    <string name="strategy_even_desc">Stop after %d even numbers encountered</string>
    <string name="you">YOU</string>
    <string name="unknown">Unknown</string>
    <string name="report_tie">Ties=%d</string>
    <string name="game_over_points">Game over after %d points reached.</string>
    <string name="game_over_turns">Game over after %d turns</string>
    <string name="game_count">Games played=%d</string>
    <string name="report_turns">TURNS=%g</string>
    <string name="report_score">SCORE=%g</string>
    <string name="error_turns">NO TURNS PLAYED</string>
    <string name="error_score">NO SCORE</string>
    <string name="email_subject">Win Strategy Proposal</string>
    <string name="email_body">Propose in detail below a strategy to employ. I will program it in if possible. Be sure to give it a name.\n\n\nNAME:</string>
    <string name="email_failed">Failed to find email app</string>
    <string name="title_activity_battle_play">BattlePlayActivity</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="roll">ROLL</string>
    <string name="stop">KEEP</string>
    <string name="report_one">One was rolled</string>
    <string name="report_ai_stop">Last roll was kept</string>
    <string name="best">BEST WAS:\n\t</string>
    <string name="ai_turn">Start AI turn</string>

</resources>
