<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dugsolutions.nerdypig.act.RulesActivity"
    tools:showIn="@layout/activity_rules">

    <TextView
        android:id="@+id/overview"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/text_margin"
        android:layout_row="0"
        android:scrollbars="vertical"
        android:text="@string/rules_overview"
        />

    <RadioButton
        android:id="@+id/rb_points"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/point_threshold"/>

    <EditText
        android:id="@+id/edit_points"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="3"
        android:inputType="number"/>

    <RadioButton
        android:id="@+id/rb_turns"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/turns_threshold"/>

    <EditText
        android:id="@+id/edit_turns"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="3"
        android:inputType="number"/>

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/num_games"/>

    <EditText
        android:id="@+id/edit_games"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="3"
        android:inputType="number"/>

</GridLayout>
