<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_battle_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dugsolutions.nerdypig.act.BattlePlayActivity"
    tools:showIn="@layout/activity_battle_play">

    <TextView
        android:id="@+id/game_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:id="@+id/scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_win"
        android:layout_marginTop="10dp"
        android:columnCount="3">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/pig_fight"
            />

        <TextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/icon1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/icon1"
            android:text="0"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/icon1"
            android:layout_below="@id/icon1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Player 1"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:src="@drawable/face_normal"/>

        <TextView
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/icon2"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@id/icon2"
            android:text="0"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/icon2"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Player 2"
            android:textSize="20sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/report"
        android:layout_marginBottom="5dp"
        >

        <ImageView
            android:id="@+id/history1"
            android:layout_width="@dimen/history_die_size"
            android:layout_height="@dimen/history_die_size"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:padding="@dimen/history_die_padding"
            android:src="@drawable/die"/>

        <ImageView
            android:id="@+id/history2"
            android:layout_width="@dimen/history_die_size"
            android:layout_height="@dimen/history_die_size"
            android:layout_toRightOf="@id/history1"
            android:padding="@dimen/history_die_padding"
            android:src="@drawable/die"/>

        <ImageView
            android:id="@+id/history3"
            android:layout_width="@dimen/history_die_size"
            android:layout_height="@dimen/history_die_size"
            android:layout_toRightOf="@id/history2"
            android:padding="@dimen/history_die_padding"
            android:src="@drawable/die"/>

        <ImageView
            android:id="@+id/history4"
            android:layout_width="@dimen/history_die_size"
            android:layout_height="@dimen/history_die_size"
            android:layout_toRightOf="@id/history3"
            android:padding="@dimen/history_die_padding"
            android:src="@drawable/die"/>

        <ImageView
            android:id="@+id/history5"
            android:layout_width="@dimen/history_die_size"
            android:layout_height="@dimen/history_die_size"
            android:layout_toRightOf="@id/history4"
            android:padding="@dimen/history_die_padding"
            android:src="@drawable/die"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/stop"/>

        <TextView
            android:id="@+id/current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/history1"
            android:layout_alignParentLeft="true"
            android:text="0"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/die_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/history"
        android:layout_below="@id/scores"
        android:background="#d9e8d7"
        >

        <ImageView
            android:id="@+id/die"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/die"/>



        <Button
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/roll"/>

        <Button
            android:id="@+id/ai_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ai_turn"
            android:visibility="gone"/>

    </FrameLayout>

</RelativeLayout>
